[gd_scene load_steps=6 format=3 uid="uid://cbd3r4kd8smbh"]

[ext_resource type="Script" path="res://towers/towers/sprayer.gd" id="1_3n024"]
[ext_resource type="Texture2D" uid="uid://ba68w61iocl47" path="res://images/sprayer.png" id="1_b3l7h"]
[ext_resource type="Texture2D" uid="uid://d30yqw72fwwi4" path="res://images/circle.png" id="3_ohc1u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7ajpk"]
radius = 147.947

[sub_resource type="CircleShape2D" id="CircleShape2D_5jt0h"]
radius = 35.5152

[node name="CharacterBody2D" type="CharacterBody2D"]
scale = Vector2(0.8, 0.8)
collision_layer = 10
collision_mask = 3
script = ExtResource("1_3n024")

[node name="noticeArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="noticeArea"]
shape = SubResource("CircleShape2D_7ajpk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5jt0h")

[node name="Sprayer" type="Sprite2D" parent="."]
texture = ExtResource("1_b3l7h")

[node name="Marker2DTop" type="Marker2D" parent="Sprayer"]
position = Vector2(-0.223323, -78.5603)

[node name="Marker2DLeft" type="Marker2D" parent="Sprayer"]
position = Vector2(-77.6037, -0.486858)

[node name="Marker2DRight" type="Marker2D" parent="Sprayer"]
position = Vector2(76.5105, -0.433266)

[node name="Marker2DBottom" type="Marker2D" parent="Sprayer"]
position = Vector2(-0.376774, 77.2285)

[node name="shootDelay" type="Timer" parent="."]
wait_time = 0.7

[node name="noticeCircle" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.313726)
position = Vector2(0.00230294, 0.0109633)
scale = Vector2(0.591838, 0.591899)
texture = ExtResource("3_ohc1u")

[connection signal="body_entered" from="noticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="noticeArea" to="." method="_on_notice_area_body_exited"]
[connection signal="timeout" from="shootDelay" to="." method="_on_shoot_delay_timeout"]
